# getJsGitDiffData

./: .gitignore  100_d3.json  20_d3.json  26macro_analysis upsales 2 more newest fields.txt  30_d3.json  50_d3.json  Cargo.toml  README.md  btcDATA.json  commands.bat  d3Data.json  data_generation.html  electronDATA.json  full_all_d3.json  full_d3.json  full_file_structure.txt  generatedJson.json  htmlpage.html  macro_analysis.txt  notes.txt  nxtDATA.json  package.json  parenttenst.json  regex_filtered_file_types.json  rustscripts for upsales.rar  server.js  serverless_d3.json  serverless_dir_test.json  serverless_file_structure.txt  upsales__log  upsales__macro_analysis.txt  upsales_d3.json  upsales_file_structure.txt  vue.json  vueDATA.json
final_runs_multianalysis/: angular__log  angular__macro_analysis.txt  bitcoin__log  bitcoin__macro_analysis.txt  electron__log  electron__macro_analysis.txt  nextjs__log  nextjs__macro_analysis.txt  obs-studio__log  obs-studio__macro_analysis.txt  react__log  react__macro_analysis.txt  serverless__log  serverless__macro_analysis.txt  summary  upsales__log  upsales__macro_analysis.txt  vue__log  vue__macro_analysis.txt
minimalvisualization/: htmlpage.html
output/: 10 % ofHistory_fileMap.txt  15 % ofHistory_fileMap.txt  20 % ofHistory_fileMap.txt  25 % ofHistory_fileMap.txt  30 % ofHistory_fileMap.txt  40 % ofHistory_fileMap.txt  5  % ofHistory_fileMap.txt  50 % ofHistory_fileMap.txt  60 % ofHistory_fileMap.txt  70 % ofHistory_fileMap.txt  75 % ofHistory_fileMap.txt  80 % ofHistory_fileMap.txt  90 % ofHistory_fileMap.txt  (+1 more)
(+32 files in other folders)
